--- a/exercises/3.1/index.html
+++ b/exercises/3.1/index.html
@@ -1124,13 +1124,13 @@
 <p>Open <a href="http://lab-3.1.sans.labs/ua2auth.php">http://lab-3.1.sans.labs/ua2auth.php</a> in Chrome. </p>
 </li>
 <li>
-<p>Switch over to Burp and allow all traffic to pass without modification. Keep clicking on "<strong>Forward</strong>" in Burp's Proxy Intercept. This page looks like the page we examined in the exercise above, but there seems to be some subtle difference.</p>
+<p>Switch over to Burp and allow all traffic to pass without modification. Keep clicking on "<strong>Forward</strong>" in Burp's Proxy Intercept. This page looks like the page we examined in the exercise above, but there is a subtle difference.</p>
 </li>
 <li>
-<p>To inspect this previous request, we change over to the "<strong>Target</strong>" tab in Burp.</p>
+<p>To inspect this previous request, we change to the "<strong>Target</strong>" tab in Burp.</p>
 </li>
 <li>
-<p>Look for the most request to "ua2auth.php" and click on it. At the bottom pane of the Burp window are the response details. Due to the window sizing, you might have to adjust the pane to let the response be visible. The "three dots symbol" allows you to adjust the pane sizes. In the response section, the server sets the browser cookie. We will need to get rid of this cookie to get to the website.</p>
+<p>Look for the most request to "ua2auth.php" and click on it. At the bottom pane of the Burp, window are the response details. Due to the window sizing, you might have to adjust the pane to let the response be visible. The "three dots symbol" allows you to adjust the pane sizes. In the response section, the server sets the browser cookie. We will need to get rid of this cookie to get to the website.</p>
 <p><img alt="" class="zoom" src="media/img-1615789856-20210315.png" /></p>
 </li>
 <li>
@@ -1248,10 +1248,10 @@
 <p><strong>U2F Dialog</strong></p>
 </li>
 <li>
-<p>Click "approve". You will now be redirected to the "My Account" page at <a href="https://lab-3.1.sans.labs/myaccount.php">https://lab-3.1.sans.labs/myaccount.php</a></p>
+<p>Click "approve." You will now be redirected to the "My Account" page at <a href="https://lab-3.1.sans.labs/myaccount.php">https://lab-3.1.sans.labs/myaccount.php</a></p>
 </li>
 <li>
-<p>Click on "Log Out". You will be redirected to the login page.</p>
+<p>Click on "Log Out." You will be redirected to the login page.</p>
 <div class="admonition information">
 <p class="admonition-title">Information</p>
 <p>At this point, we have registered a token with the server. There is a key pair generated, and the server is storing the key's information to be used in the future to authenticate the user when the user logs in. </p>
